# QuantumA-Core

./: .dockerignore  .gitignore  AI_AGENT_INTEGRATION_GUIDE.md  Dockerfile  LICENSE  QUANTUM_API_GUIDE.md  QUANTUM_CORE_AI_VADEMECUM.md  README.md  api_server.py  check_cuda_venv.bat  check_cuda_venv.ps1  docker-compose.yml  gpu_stress_test.py  molecular_chemistry_test.py  openwebui_tool.py  pyproject.toml  qaoa_maxcut_28q.py  requirements.txt  run_api_and_gpu_checks.ps1  run_check.py  run_cuda_validation.ps1  setup_cuda_venv.bat
.github/workflows/: publish.yml  tests.yml
quantum_core/: __init__.py  circuit.py  compat.py  density_matrix.py  gates.py  gpu_statevector.py  noise_models.py  simulator.py  statevector.py
tests/: academic_test_bv.py  academic_test_grover.py  academic_test_grover_perfect.py  academic_test_qft.py  academic_test_teleportation.py  benchmark.py  benchmark_gpu_cpu.py  gpu_pro_validation.py  profile_28q_scaling.py  test_28q_complex_gpu.py  test_28q_gpu.py  test_simulator.py
